@@ -61,6 +61,7 @@ Poeple/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 	* kermidt.zed: patches for absolutePosition in CocosNode
 		patches for Labels in Texture2D
 	* Leonardo Kasperavičius: original author of QuadParticleSystem class
+		Author of the original Bezier action
 	* lukeman: patches for MenuItem
 	* Maarten Billemont (lhunath): author of ParticleRain
 		added suport for particles' source
